# finance_alerts_telegram_10_steps

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  finance_alerts_telegram_10_steps.md  pyproject.toml
app/: celery_app.py  main.py
app/api/: admin.py  deps.py  health.py  stripe_webhook.py
app/core/: config.py  database.py  logging.py
app/dedupe/: hash.py  similarity.py
app/ingest/: canonical.py  rss.py  scraper.py
app/models/: __init__.py  article.py  delivery.py  signal.py  source.py  user.py
app/normalize/: cleaner.py  langdetect.py
app/notify/: base.py  formatter.py  telegram.py
app/score/: categories.py  rules.py
app/tasks/: ingest.py  notify.py  process.py
configs/: channels.yaml  sources.yaml
docs/: architecture.md  billing.md  dataflow.md  deploy.md  requirements.md  runbook.md  sources.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
nginx/: nginx.conf
scripts/: backup.sh  seed_sources.py
tests/: test_admin.py  test_canonical.py  test_dedupe.py  test_formatter.py  test_health.py  test_rss.py  test_scoring.py
